--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ body {
   color: var(--navy-blue);
 }
 .site-nav {
-  color: var(--navy-blue);
+  color: #2e2f42;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -58,7 +58,7 @@ body {
 }
 
 .addr-link {
-  color: var(--slate);
+  color: #434455;
 
   
 }
