--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ body {
 .logo .logo-studio {
   color: var(--navy-blue);
 }
-.site-nav {
+.site-nav .link {
   color: #2e2f42;
   font-weight: 500;
   font-size: 16px;
