--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,13 @@ body {
 .logo .logo-studio {
   color: var(--navy-blue);
 }
-.site-nav .link {
-  color: #2e2f42;
+.site-nav {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+}
+.nav-menu {
+  color: #2e2f42;
 }
 
 .site-nav .link:hover,
