hw2 header colors and section2

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,12 @@ body {
   text-align: center;
   text-transform: capitalize;
 }
+.text{
+  color: var(--slate);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
 
 .features-list .title,
 .team-list .title,
