--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 body {
   background-color: var(--white);
   font-family: Roboto, sans-serif;
-  color: var(--slate);
+  color: #434455;
 }
 .list {
   list-style: none;
