--- a/css/styles.css
+++ b/css/styles.css
@@ -121,8 +121,9 @@ body {
   text-transform: capitalize;
 }
 .team-foto {
-  background-color: (var(--white));
+  background-color: #ffffff;
 }
+
 .text {
   color: var(--slate);
   font-size: 16px;
